Updated styling. Added rounded corners, spacing between items. Added permanent scroll bar to fix header width changing between pages.

--- a/src/Item.css
+++ b/src/Item.css
@@ -1,10 +1,11 @@
 .item-line {
   display: flex;
-  padding: 0.5rem;
-  background-color: #eaeaea;
+  padding: 0.1rem;
+  background: #eeeeee;
   border-bottom: 1px black solid;
+  border-radius: 5px;
   max-width: 80%;
-  margin: auto;
+  margin: 0.5rem auto;
 }
 
 .alignCenter {
